<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/History" />
        <item
            android:id="@+id/nav_top_attractions"
            android:icon="@drawable/ic_top_attractions"
            android:title="@string/top_attractions" />
        <item
            android:id="@+id/nav_best_hotels"
            android:icon="@drawable/ic_best_hotels"
            android:title="@string/best_hotels" />
        <item
            android:id="@+id/nav_yummy_food"
            android:icon="@drawable/ic_yummy_food"
            android:title="@string/yummy_food" />

    </group>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send"
                android:title="@string/send" />

        </menu>

    </item>

</menu>